s/bu_vls_trunc2/bu_vls_trunc/g
        removed duplicitous function in favor of more general version [7.24]
s/bn_pi/M_PI/g
s/bn_twopi/M_2PI/g
s/bn_halfpi/M_PI_2/g
s/bn_quarterpi/M_PI_4/g
s/bn_invpi/M_1_PI/g
s/bn_inv2pi/M_1_2PI/g
s/bn_inv4pi/M_1_4PI)/g
s/bn_inv255/(1.0 \/ 255.0)/g
s/bn_degtorad/DEG2RAD/g
s/bn_radtodeg/RAD2DEG/g
s/bn_sin_scale/(BN_SINTABSIZE \/ M_2PI)/g
        eliminated a number of libbn globals in favor of existing constants [7.24]
s/(#[[:space:]]*include[[:space:]]+["<])vfont-if\.h/\1bu\/vfont.h/g
s/(#[[:space:]]*include[[:space:]]+["<])cmd\.h/\1bu\/cmd.h/g
s/(#[[:space:]]*include[[:space:]]+["<])hist\.h/\1bu\/hist.h/g
s/(#[[:space:]]*include[[:space:]]+["<])magic\.h/\1bu\/magic.h/g
        library-specific public headers moved into a subdir [7.24]
s/([^_])([nh]to[hn][fd])/\1bu_cv_\2/g
        ntohf, ntohd, htonf, htond renamed with bu_cv_ prefix [7.24]

7.26
----
s/bu_kill_parallel\([[:space:]]*\);//g
        didn't do anything unless called from forked process, use bu_terminate() [7.25]
s/bu_jmpbuf/bu_jmpbuf[0]/g
s/bu_setjmp_valid/bu_setjmp_valid[0]/g
        can replace 0 with bu_parallel_id() to get thread-safe jumping [7.25]
s/bu_semaphore_reinit/bu_semaphore_init/g
        no longer need to manually reinitialize (or initialize) semaphores [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])fbio\.h/\1bu\/fb.h/g
        fbio.h is now part of fb.h [7.25]
s/UNION/'u'/g
s/SUBTRACT/'-'/g
s/INTERSECT/'+'/g
        old db.h db4 preprocessor symbols removed, use char or DB_OP_* [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])bselect\.h/\1bsocket.h/g
s/(#[[:space:]]*include[[:space:]]+["<])bin\.h/\1bnetwork.h/g
        rename bselect.h and bin.h public headers to be more declaratively named [7.25]
s/db5_enc_len[(.*)]/DB5_ENC_LEN(\1)/g
	replaced db5_enc_len[] global array with DB5_ENC_LEN() macro [7.25]
s/db_normalize/bu_normalize/g
	move the path normalization routine to libbu [7.25]